// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.S checkGrammar 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S checkGrammar 2`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S checkGrammar 3`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S checkGrammar 4`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S checkHighlight 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S checkHighlight 2`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S checkHighlight 3`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S checkHighlight 4`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S checkSpaces 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S checkSpaces 2`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S checkSpaces 3`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S checkSpaces 4`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S className 1`] = `
<s
  className="uu5-bricks-s my-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S content 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</s>
`;

exports[`UU5.Bricks.S content 2`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</s>
`;

exports[`UU5.Bricks.S content 3`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</s>
`;

exports[`UU5.Bricks.S content 4`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</s>
`;

exports[`UU5.Bricks.S controlled 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S controlled 2`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S controlled 3`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S controlled 4`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S default props 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S disabled 1`] = `
<s
  className="uu5-bricks-s uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</s>
`;

exports[`UU5.Bricks.S disabled 2`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S disabled 3`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S disabled 4`] = `
<s
  className="uu5-bricks-s uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</s>
`;

exports[`UU5.Bricks.S docKit examples UU5.Bricks.S should render without crash 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="uuID01"
  style={Object {}}
  title={null}
>
  <P
    className={null}
    content="This is normal text"
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID02"
    ignoreInnerHTML={false}
    key="uuID02"
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
  <P
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID03"
    ignoreInnerHTML={false}
    key="uuID03"
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  >
    This is 
    <S
      className={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id="uuID04"
      ignoreInnerHTML={false}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    >
      striked
    </S>
     text
  </P>
</div>
`;

exports[`UU5.Bricks.S dynamic 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S dynamic 2`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S dynamic 3`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S dynamic 4`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S hidden 1`] = `
<s
  className="uu5-bricks-s uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S hidden 2`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S hidden 3`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S hidden 4`] = `
<s
  className="uu5-bricks-s uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S id 1`] = `
<s
  className="uu5-bricks-s"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S ignoreHTML 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S ignoreHTML 2`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S ignoreHTML 3`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S ignoreHTML 4`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S mainAttrs 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S name 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S noIndex 1`] = `
<s
  className="uu5-bricks-s uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S noIndex 2`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S noIndex 3`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S noIndex 4`] = `
<s
  className="uu5-bricks-s uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S selected 1`] = `
<s
  className="uu5-bricks-s uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S selected 2`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S selected 3`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S selected 4`] = `
<s
  className="uu5-bricks-s uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S style 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.S style 2`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.S style 3`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.S style 4`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.S textCorrector 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S textCorrector 2`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S textCorrector 3`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S textCorrector 4`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.S tooltip 1`] = `
<s
  className="uu5-bricks-s"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
